--- a/style.css
+++ b/style.css
@@ -81,3 +81,8 @@
             font-size: 3rem;
             margin-right: 1rem;
         }
+
+        footer{
+            text-align: center;
+            font-size: 0.7rem;
+        }
